# investment_portal

./: .pre-commit-config.yaml
backend/: Taskfile.yaml  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: engine.py  init_db.py
backend/app/models/: investment.py  project.py
backend/app/services/: invrstment_service.py  project_service.py
